syntax="proto3";
package Rpc;

enum RpcCompressType
{
RpcCompressType_None	= 0;
RpcCompressType_LZ4		= 1;
}

enum RpcEncodingType
{
RpcEncodingType_None		= 0;
RpcEncodingType_Ceras		= 1;
RpcEncodingType_MsgPack		= 2;
}

message RpcMeta 
{
RpcRequestMeta request		= 1;
RpcResponseMeta response	= 2;
int32 compress_type			= 3;
int32 encoding_type			= 4;
sfixed64 request_id			= 5;
bool keepalive				= 6;	//true为心跳, 没有args
}

message RpcRequestMeta
{
string service_name			= 1;	//服务的名称
string method_name			= 2;	//函数名
sfixed64 trace_id			= 4;	//标识同一个大的请求, 例如玩家发起的请求
sfixed64 trace_server		= 5;
sfixed64 span_id			= 6;	//处理过程中小的请求
sfixed64 parent_span_id		= 7;	//当前请求的上层请求
bool oneway					= 8;	//是否不需要返回值
string actor_id				= 9;	//ActorRPC的对象唯一ID
}

message RpcResponseMeta
{
int32 error_code			= 1;	//错误码
string error_text			= 2;	//错误描述
}
